--- a/crd/Cargo.toml
+++ b/crd/Cargo.toml
@@ -8,11 +8,11 @@ version = "0.1.0"
 
 [dependencies]
 product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "kubers059" }
 stackable-spark-common = { path = "../common" }
 
-k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
-kube = { version = "0.58", default-features = false, features = ["derive"] }
+k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_21", "schemars"] }
+kube = { version = "0.59", default-features = false, features = ["derive"] }
 schemars = "0.8"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
