--- a/operator/Cargo.toml
+++ b/operator/Cargo.toml
@@ -8,7 +8,7 @@ license = "OSL-3.0"
 
 [dependencies]
 product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "kubers059" }
 stackable-spark-common = { path = "../common" }
 stackable-spark-crd = { path = "../crd" }
 
@@ -16,8 +16,8 @@ async-trait = "0.1"
 chrono = "0.4"
 futures = "0.3"
 json-patch = "0.2"
-k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
-kube = { version = "0.58", default-features = false, features = ["derive"] }
+k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_21"] }
+kube = { version = "0.59", default-features = false, features = ["derive"] }
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
