--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,6 +11,7 @@ stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git",
 stackable-spark-crd = { path = "../crd" }
 stackable-spark-operator = { path = "../operator" }
 
+kube = { version = "0.59", default-features = false }
 serde_yaml = "0.8"
 tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1"
